syntax = "proto3";

package bookservice;

option java_multiple_files = true;
option java_package = "bookservice";

import "book_message.proto";

message GetBooksRequest {
	string search_query = 1;
}

message GetBooksResponse {
	repeated Book books = 1;
}