syntax = "proto3";

package bookservice;

option java_multiple_files = true;
option java_package = "bookservice";

import "book_message.proto";

message UpdateBookRequest {
	Book book = 1;
}

message UpdateBookResponse {
	bool status = 1;
	string message = 2;
}